<?xml version="1.0"?>
<package format="3">
  <name>clober</name>
  <version>1.0.4</version>
  <description> 
    The meta package for Clober 
  </description>
  <maintainer email="ros@clobot.co.kr">clobot-git</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>clober_bringup</exec_depend>
  <exec_depend>clober_simulation</exec_depend>
  <exec_depend>clober_description</exec_depend>
  <exec_depend>clober_slam</exec_depend>
  <exec_depend>clober_navigation</exec_depend>
  <exec_depend>clober_teleop</exec_depend>
</package>