<?xml version="1.0"?>
<package format="3">
  <name>clober_teleop</name>
  <version>1.0.4</version>
  <description> 
    The meta package for Clober Teleoperator
  </description>
  <maintainer email="ros@clobot.co.kr">clobot-git</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>